Fix scrollbar in movelist panel

--- a/frontend/src/scss/app.scss
+++ b/frontend/src/scss/app.scss
@@ -212,7 +212,7 @@
 
 .moveListPanel__inner {
   // Style the keyboard event handler span
-  > span {
+  & > span {
     display: flex;
     min-height: 0;
   }
